# pymash

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml  wheels.yml
docs/: evaluation_gap_audit.md
examples/: 01_introduction.ipynb  02_data_driven_covariances.ipynb  03_eqtl_workflow.ipynb  04_posterior_sampling.ipynb  05_gwas_to_mash.ipynb
pymash/: __init__.py  _edcpp.cpp  _numerics.py  cli.py  correlation.py  covariances.py  data.py  ed.py  likelihoods.py  mash.py  optimize.py  plots.py  posterior.py  results.py  simulations.py  workflow.py
scripts/: profile_phase4.py
tests/: test_check_threading.py  test_cli.py  test_correlation.py  test_covariances.py  test_cpp_likelihood_backend.py  test_cpp_posterior_backend.py  test_data.py  test_data_extended.py  test_ed_bovy.py  test_likelihoods.py  test_mash.py  test_optimize.py  test_phase2_covariances.py  test_plant_genetics_scenarios.py  test_plots.py  test_r_cov_ed_reference.py  test_r_reference.py  test_r_reference_general.py  test_r_reference_mixsqp.py  test_r_reference_onebyone.py  test_results.py  test_sampling_and_baseline.py  test_workflow.py
tests/r/: run_cov_ed_reference.R  run_mash1by1_reference.R  run_mashr_reference.R
